开始抽时间大修订
日后可能会交给Forte.EXE帮忙PR，
目前还没有完全定下修订的文本格式，试运行中，非正式版本。但是观感会比之前的好。

--- a/前言/前言.md
+++ b/前言/前言.md
@@ -1,9 +1,10 @@
 # 前言
 
-您需要在掌握java基础知识前，再观看此教程。
+您需要掌握一定的Java基础后，再观看此教程。
 
-此教程提供了完整的nk插件开发教程，学习完此教程，你就可以独自实现一个
-自己的插件了，感谢您开始观看这个教程。
+本教程提供了一套完整的Nukkit插件开发教程。学习完此教程，您就可以独自实现一个属于自己的插件了。
+
+再次感谢您阅读本教程。
 
 [comment]: <> (本部分分为八个小节)
 
