--- a/前言/如何搭建环境.md
+++ b/前言/如何搭建环境.md
@@ -1,33 +1,40 @@
 # 前言-如何搭建环境
 
-参与编写者: MagicLu550
-#### 建议学习时间: 40分钟
-##### 学习要点: 学会使用idea搭建maven环境和nukkit开发环境,并学习调试nukkit项目
+参与编写者：MagicLu550
 
-一. 环境搭建
+后期修订：愉悦师柑也  
 
-搭建环境是我们使用nukkit的第一步，虽然其中下载IDE不是必要的一步，但是是我们进行简便开发的第一步。
+**本版本可能为非正式版本，但不影响阅读，请您悉知**
+#### 建议学习时间：40 分钟
+##### 学习要点: 学会使用 IDEA 搭建 Maven 环境和 Nukkit 开发环境，并学习调试 Nukkit 项目
+
+### 一、环境搭建
+
+搭建环境是我们学习 Nukkit 的第一步，虽然其中下载 IDE 不是必要的一步，但着是我们以便捷的方式进行开发的第一步。
 
 
-1. 首先上[idea官网](https://www.jetbrains.com/idea/download/#section=mac)下载我们所需要的版本，我们
-一般选择免费的Community版本，当然您也可以选择购买Ultimate版本,Community版本其实已经符合我们使用的需求，当然
-作者使用的是Ultimate版本在此教学。
+1. 首先上 [IDEA官网](https://www.jetbrains.com/idea/download/) 下载我们所需要的版本，我们一般选择免费的 Community 版本，因为它已经符合我们的需求了。作者这里使用的是 Ultimate 版本。
 ![1-01](../images/1-01.png)
 
-2.打开idea后，我们这里使用[maven](https://maven.apache.org/)项目进行构建,这里使用[jdk1.8](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html)，为这些选项即可
+1. 打开 IDEA 后，我们这里使用 [Maven](https://maven.apache.org/) 项目进行构建。这里使用 [jdk1.8](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html) ，只要是图中这样的就可以了。
 ![1-02](../images/1-02.png)
 
-3.输入完groupId和artifactId(这些是自定义的)，创建项目后，我们会进入这个界面,这里我artifactId为MyFirstPlugin
+3.输入 groupId 和 artifactId （这些是需要你来写的，支持自定义），并且创建项目后，我们会进入到下图的界面。图中的 artifactId 为 MyFirstPlugin.
 ![1-03](../images/1-03.png)
 
 ```
-转自Snake1999: 这里有必要做一些详细说明。GroupId 经常也是 Java 项目的包名。Java 项目的包命名规则有这样的约定：
-以 网站倒着写.项目名字 或者 网站倒着写.项目名字.模块名字 为结构
-必须以小写字母开头
-必须与别的 Java 包相区别
-Nukkit 内核的所有包都是遵循这个规定的 Nukkit 的网站是 nukkit.cn，所以里面包含所有方块（block）的包的包名应该是：
+关于groupId为何物，Snake1999做出了非常详细的解释(转)：
+这里有必要做一些详细说明。
+GroupId 经常也是 Java 项目的包名。Java 项目的包命名规则有这样的约定：
+“以网站倒着写.项目名字” 或者 “网站倒着写.项目名字.模块名字” 为结构。
+必须以小写字母开头，
+必须与别的 Java 包相区别。
+Nukkit 内核的所有包都是遵循这个规定的，
+例如Nukkit 的网站是 nukkit.cn，所以里面包含所有方块 （block） 的包的包名应该是：
 cn.nukkit.block
-各位在编写 Nukkit 插件的时候，需要编写一个独特的、和他人的项目不一样的包名，以便与他人开发的插件相区别。比如译者的网站是 snake1999.com，如果译者编写了一个叫 ExamplePlugin 的 Nukkit 插件，就可以放在包名为 com.snake1999.exampleplugin 的包内。以下包名的结构都是可以使用的：
+
+各位在编写 Nukkit 插件的时候，需要编写一个独特的、和他人的项目不一样的包名，以便与他人开发的插件相区别。
+比如译者的网站是 snake1999.com，如果译者编写了一个叫 ExamplePlugin 的 Nukkit 插件，就可以放在包名为 com.snake1999.exampleplugin 的包内。以下包名的结构都是可以使用的：
 com.snake1999.exampleplugin
 net.mcbbs.tutorialplugin
 ru.nukkit.nkexample
@@ -35,7 +42,9 @@ me.fromgate.firstplugin
 而以下的包名都是不被推荐使用的：
 main.java.plugin
 TestPlugin
+
 另外，开发 Nukkit 插件，我们规定不能把插件的任何部分存放在 cn.nukkit 包下，否则后果自负。
+
 关于主类的名称，只要能和别人的主类区分开就可以了，但是不推荐使用MainClass之类的名称。
 ```
 
@@ -183,19 +192,16 @@ TestPlugin
 
 [comment]: <> (```)
 
-二. 调试插件
 
-其实调试插件很简单，这里我们需要这几个过程
+### 二、调试插件
 
-- 编译,打包
-- 部署
-- 运行加载
-- 调试
+###### 其实调试插件很简单，这里我们需要以下四个过程：
 
-1. 编译打包很简单,我们使用ideaIDE可以轻松的实现maven打包
+- 编译, 打包 → 部署 → 运行加载 → 调试
 
-PS:当然在打包之前，建议在pom.xml里加下这个，可以解决idea的编译器版本
-无效等一系列问题
+1. 编译打包很简单。我们使用 IDE 可以轻松实现 Maven 打包。
+
+PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 编译器版本无效等一系列问题.
 ```xml
     <build>
         <plugins>
@@ -214,8 +220,9 @@ PS:当然在打包之前，建议在pom.xml里加下这个，可以解决idea的
         </plugins>
     </build>
 ```
-当然项目是jdk8演示的，如果您不是jdk8，则需要修改一个地方
-jdk9
+本项目所采用的jdk版本为jdk8。如果您使用的不是jdk8，则需要**修改一些地方**。
+
+**jdk9**
 ```xml
     <build>
         <plugins>
@@ -234,7 +241,8 @@ jdk9
         </plugins>
     </build>
 ```
-jdk10
+
+**jdk10**
 ```xml
     <build>
         <plugins>
@@ -253,24 +261,28 @@ jdk10
         </plugins>
     </build>
 ```
-以此类推....如果不可行可以删掉前面的1.
+以此类推....如果行不通，可以尝试可以删掉前面的“1.”
 
-比如jdk11就是
+比如，jdk11就是
 
 ```
 <source>11</source>
 <target>11</target>
 ```
 
-如图所示添加这些标签
+如图所示，添加这些标签：
 ![1-08](../images/1-08.png)
-如图中按钮所示(不要在意其中的项目)
+
+如图中按钮所示（请不要在意其中的项目）：
 ![1-06](../images/1-06.png)
-之后我们找到其中的package,点击即可
+
+之后我们找到其中的package，点击即可。
 ![1-07](../images/1-07.png)
-如图所示，出现"BUILD SUCCESS"我们就成功了
+
+如图所示，出现 **"BUILD SUCCESS"** ，编译就大功告成了。
 ![1-09](../images/1-09.png)
-一般的，目标jar包会产生在target文件夹中
+
+一般来讲，**目标jar包** 会产生在 target 文件夹中。
 ![1-10](../images/1-10.png)
 
 2. 部署
@@ -282,54 +294,53 @@ jdk10
 
 如果出现了加载$(您的插件名字)成功之类的字样，说明您的插件成功了。
 
-4. 之后进入游戏测试您的插件是否符合您的需求，根据您插件出现的各种问题
-进行再次调试，修改，打包等
+4. 之后进入游戏测试您的插件是否符合您的需求，根据您插件出现的各种问题进行再次调试、修改、打包等。
 
-### 本地的导入和打包
+### 三、本地的导入和打包
 
-鉴于很多人的需要(原因是nukkitx的maven服务器太卡了)，这里我写一下本地导入jar包的方式
+鉴于很多人的需要（因为 NukkitX 的 Maven 服务器太卡了），这里我写一下本地导入jar包的方法。
 
-> 导入包
+1. 导入包
 
-其实要简单很多，您需要上[nukkitx](https://ci.nukkitx.com/job/NukkitX/job/Nukkit/job/master/)的jenkins下载一个nukkit的jar包。
+其实要简单很多，您需要上 [NukkitX](https://ci.nukkitx.com/job/NukkitX/job/Nukkit/job/master/) 的 Jenkins 下载一个 Nukkit 的jar包，
 
-之后将您的jar包放到您项目根目录的libs文件夹下(这里您需要自己创建)
+然后将您的jar包放到您项目根目录的libs文件夹下（这里您需要自己创建）
 
 ![1-11](../images/1-11.png)
 
-之后我们把它给导入我们的项目里
+我们再把它导入我们的项目里，
 
-这里选择libraries
+这里选择 libraries：
 
 ![1-12](../images/1-12.png)
 
-我们选择Java，这样可以直接导入本地jar包
+选择 Java，这样可以直接导入本地jar包。
 
 ![1-13](../images/1-13.png)
 
-之后我们选择我们的nukkit的jar包
+之后我们选择下载好的 Nukkit 的jar包，
 
 ![1-14](../images/1-14.png)
 
-导入完毕
+导入完毕，
 
 ![1-15](../images/1-15.png)
 
-> 构建jar包
+2. 构建jar包
 
-之后，我们在libs下创建一个plugins文件夹(先前的点击下面的OK保存一下)
+再然后，我们在libs下创建一个plugins文件夹（先前的点击下面的OK保存一下），
 
 ![1-16](../images/1-16.png)
 
-之后再打开我们的这个窗口,找到artifacts，之后点击那个'+'，找到JAR
+打开我们的这个窗口，找到artifacts，之后点击 '+' ，找到 JAR，
 
 ![1-17](../images/1-17.png)
 
-然后创建之后，是这样子(图中已经说明了compile output)
+创建之后，是这样子（图中已经说明了compile output）。
 
 ![1-18](../images/1-18.png)
 
-之后，如图中所示，把plugin.yml也添加到我们的jar包里
+然后如图中所示，把 plugin.yml 也添加到我们的jar包里
 
 ![1-19](../images/1-19.png)
 
@@ -345,21 +356,22 @@ jdk10
 
 ![1-26](../images/1-26.png)
 
-记得设置上这个
+记得设置上这个：
 
 ![1-34](../images/1-34.png)
 
-之后保存
+保存。
 
 ![1-27](../images/1-27.png)
 
-> 设置工作文件夹
 
-最后一步，设置我们的运行环境,如图所示，点击Add Configuration
+3. 设置工作文件夹
+
+最后一步，设置我们的运行环境。如图所示，点击Add Configuration
 
 ![1-28](../images/1-28.png)
 
-之后，我们分别设置jar包和工作文件夹
+接着，我们分别设置jar包和工作文件夹
 
 ![1-29](../images/1-29.png)
 
@@ -369,36 +381,49 @@ jdk10
 
 ![1-32](../images/1-32.png)
 
-之后保存
+最后优雅的点击保存。
 
 ![1-33](../images/1-33.png)
 
-> 运行
+4. 运行
 
-我们这里写个主类
+我们在这儿先写个主类
 
 ![1-35](../images/1-35.png)
 
-我们点击build，来打包插件
+再点击 Build，打包插件
 
 ![1-36](../images/1-36.png)
 
-之后我们进行运行
+之后我们把插件放进服务器中跑一遍，
 
 ![1-37](../images/1-37.png)
 
-我们发现成功了
+成功√
 
 ![1-38](../images/1-38.png)
 
 
-- IDE汉化补丁
+### 零、IDEA 的汉化
 
-感谢Testfor,Itname等人的帮助，我们找到了idea的汉化包，可以到这里[下载](https://github.com/pingfangx/TranslatorX)
+~~感谢 Testfor , Itname 等人的帮助，我们找到了 IDEA 的汉化包，[点击这里下载](https://github.com/pingfangx/TranslatorX)~~
+
+上面的汉化包适用于2019.3，
+
+截至2021年10月28日，IDEA Community 已经更新至2021.2.3，
+
+**且官方已支持使用插件进行界面的汉化。**
+
+以 *愉悦师柑也* 的 CLion 2021.2.2 为例，您可以前往 Settings - Plugins 搜素 *Chinese* 并安装。
+
+![1-39](../images/1-39.png)
+
+~~NTR了，但没有完全NTR~~
 
 [下一节](../第一章/1-0_前言.md)
 
-参考文献
+
+### 参考文献
 - [[教程] [官方] 使用Maven配置Nukkit开发环境的方法（部分）](https://www.mcbbs.net/thread-706178-1-1.html)
 - [Nukkit插件从0开始](https://www.cnblogs.com/xtypr/p/nukkit_plugin_start_from_0.html)
 - [[教程] [转载] 如何开始制作 Nukkit 插件? Fromgate 的插件教程来了! [长文|多图] ](https://www.mcbbs.net/forum.php?mod=viewthread&tid=552265&page=1&authorid=100001)
