稍微改了一下？

--- a/前言/前言.md
+++ b/前言/前言.md
@@ -1,8 +1,8 @@
 # 前言
 
-您需要掌握一定的Java基础后，再观看此教程。
+您需要掌握一定的Java基础后，再阅读本教程。
 
-本教程提供了一套完整的Nukkit插件开发教程。学习完此教程，您就可以独自实现一个属于自己的插件了。
+本教程提供了一套完整的Nukkit插件开发教程。学习本教程后，您就可以独自实现一个属于自己的插件了。
 
 再次感谢您阅读本教程。
 
