--- a/前言/如何搭建环境.md
+++ b/前言/如何搭建环境.md
@@ -1,40 +1,50 @@
-# 前言-如何搭建环境
+# 前言 - 如何搭建环境
+
+本小节目录：
+
+* [一、环境搭建](#一环境搭建)
+* [二、调试插件](#二调试插件)
+* [三、本地的导入和打包](#三本地的导入和打包)
+* [零、IDEA的汉化](#零idea-的汉化)
+
+---
 
 参与编写者：MagicLu550
 
-后期修订：愉悦师柑也  
+后期修订：愉悦师柑也
 
-**本版本可能为非正式版本，但不影响阅读，请您悉知**
-#### 建议学习时间：40 分钟
-##### 学习要点: 学会使用 IDEA 搭建 Maven 环境和 Nukkit 开发环境，并学习调试 Nukkit 项目
+**本版本可能为非正式版本，但不影响阅读，请您悉知。**
 
+#### 本小节建议学习时间：40 分钟；
+##### 学习要点: 学会使用IDEA搭建Maven环境和Nukkit开发环境，并学习调试Nukkit项目；
+
+---
 ### 一、环境搭建
 
-搭建环境是我们学习 Nukkit 的第一步，虽然其中下载 IDE 不是必要的一步，但着是我们以便捷的方式进行开发的第一步。
+搭建环境是我们学习Nukkit的第一步。虽然安装IDE不是必要的一步，但这是我们能以便捷的方式进行开发的第一步。
 
-
-1. 首先上 [IDEA官网](https://www.jetbrains.com/idea/download/) 下载我们所需要的版本，我们一般选择免费的 Community 版本，因为它已经符合我们的需求了。作者这里使用的是 Ultimate 版本。
+1. 首先上 [IDEA官网](https://www.jetbrains.com/idea/download/) 下载我们所需要的版本，我们一般选择免费的Community版本，因为它已经符合我们的需求了。作者这里使用的是Ultimate版本。
 ![1-01](../images/1-01.png)
 
-1. 打开 IDEA 后，我们这里使用 [Maven](https://maven.apache.org/) 项目进行构建。这里使用 [jdk1.8](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html) ，只要是图中这样的就可以了。
+1. 打开IDEA后，我们这里使用 [Maven](https://maven.apache.org/) 项目进行构建。这里使用 [JDK1.8](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html) ，只要是图中这样的就可以了。
 ![1-02](../images/1-02.png)
 
-3.输入 groupId 和 artifactId （这些是需要你来写的，支持自定义），并且创建项目后，我们会进入到下图的界面。图中的 artifactId 为 MyFirstPlugin.
+3.输入 *groupId* 和 *artifactId* （这些是需要你来写的，支持自定义），并且创建项目后，我们会进入到下图的界面。图中的 *artifactId* 为 **MyFirstPlugin**.
 ![1-03](../images/1-03.png)
 
 ```
 关于groupId为何物，Snake1999做出了非常详细的解释(转)：
 这里有必要做一些详细说明。
-GroupId 经常也是 Java 项目的包名。Java 项目的包命名规则有这样的约定：
+GroupId 经常也是Java项目的包名。Java项目的包命名规则有这样的约定：
 “以网站倒着写.项目名字” 或者 “网站倒着写.项目名字.模块名字” 为结构。
 必须以小写字母开头，
-必须与别的 Java 包相区别。
-Nukkit 内核的所有包都是遵循这个规定的，
-例如Nukkit 的网站是 nukkit.cn，所以里面包含所有方块 （block） 的包的包名应该是：
+必须与别的Java包相区别。
+Nukkit内核的所有包都是遵循这个规定的，
+例如Nukkit的网站是nukkit.cn，所以里面包含所有方块（block）的包的包名应该是：
 cn.nukkit.block
 
-各位在编写 Nukkit 插件的时候，需要编写一个独特的、和他人的项目不一样的包名，以便与他人开发的插件相区别。
-比如译者的网站是 snake1999.com，如果译者编写了一个叫 ExamplePlugin 的 Nukkit 插件，就可以放在包名为 com.snake1999.exampleplugin 的包内。以下包名的结构都是可以使用的：
+各位在编写Nukkit插件的时候，需要编写一个独特的、和他人的项目不一样的包名，以便与他人开发的插件相区别。
+比如译者的网站是snake1999.com，如果译者编写了一个叫ExamplePlugin的Nukkit插件，就可以放在包名为com.snake1999.exampleplugin的包内。以下包名的结构都是可以使用的：
 com.snake1999.exampleplugin
 net.mcbbs.tutorialplugin
 ru.nukkit.nkexample
@@ -43,7 +53,7 @@ me.fromgate.firstplugin
 main.java.plugin
 TestPlugin
 
-另外，开发 Nukkit 插件，我们规定不能把插件的任何部分存放在 cn.nukkit 包下，否则后果自负。
+另外，开发Nukkit插件，我们规定不能把插件的任何部分存放在cn.nukkit包下，否则后果自负。
 
 关于主类的名称，只要能和别人的主类区分开就可以了，但是不推荐使用MainClass之类的名称。
 ```
@@ -197,11 +207,11 @@ TestPlugin
 
 ###### 其实调试插件很简单，这里我们需要以下四个过程：
 
-- 编译, 打包 → 部署 → 运行加载 → 调试
+> 编译，打包 → 部署 → 运行加载 → 调试
 
-1. 编译打包很简单。我们使用 IDE 可以轻松实现 Maven 打包。
+1. 编译打包很简单。我们使用IDE可以轻松实现Maven打包。
 
-PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 编译器版本无效等一系列问题.
+PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决IDEA编译器版本无效等一系列问题。
 ```xml
     <build>
         <plugins>
@@ -220,9 +230,9 @@ PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 
         </plugins>
     </build>
 ```
-本项目所采用的jdk版本为jdk8。如果您使用的不是jdk8，则需要**修改一些地方**。
+本项目所采用的JDK版本为JDK8。如果您使用的不是JDK8，则需要**修改一些地方**。
 
-**jdk9**
+**JDK9**
 ```xml
     <build>
         <plugins>
@@ -242,7 +252,7 @@ PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 
     </build>
 ```
 
-**jdk10**
+**JDK10**
 ```xml
     <build>
         <plugins>
@@ -263,7 +273,7 @@ PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 
 ```
 以此类推....如果行不通，可以尝试可以删掉前面的“1.”
 
-比如，jdk11就是
+比如，JDK11就是
 
 ```
 <source>11</source>
@@ -273,7 +283,7 @@ PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 
 如图所示，添加这些标签：
 ![1-08](../images/1-08.png)
 
-如图中按钮所示（请不要在意其中的项目）：
+如图中按钮所示：
 ![1-06](../images/1-06.png)
 
 之后我们找到其中的package，点击即可。
@@ -282,10 +292,10 @@ PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 
 如图所示，出现 **"BUILD SUCCESS"** ，编译就大功告成了。
 ![1-09](../images/1-09.png)
 
-一般来讲，**目标jar包** 会产生在 target 文件夹中。
+一般来讲，**目标jar包**会产生在 target 文件夹中。
 ![1-10](../images/1-10.png)
 
-2. 部署
+1. 部署
 
 之后把打包好的合法插件丢入plugins文件里就完美运行了，这里将不做图示
 这就是插件部署的过程。
@@ -298,11 +308,11 @@ PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 
 
 ### 三、本地的导入和打包
 
-鉴于很多人的需要（因为 NukkitX 的 Maven 服务器太卡了），这里我写一下本地导入jar包的方法。
+鉴于很多人的需要（因为NukkitX的Maven服务器太卡了），这里我写一下本地导入jar包的方法。
 
 1. 导入包
 
-其实要简单很多，您需要上 [NukkitX](https://ci.nukkitx.com/job/NukkitX/job/Nukkit/job/master/) 的 Jenkins 下载一个 Nukkit 的jar包，
+其实要简单很多，您需要上 [NukkitX的Jenkins](https://ci.nukkitx.com/job/NukkitX/job/Nukkit/job/master/) 下载一个 Nukkit 的jar包，
 
 然后将您的jar包放到您项目根目录的libs文件夹下（这里您需要自己创建）
 
@@ -314,11 +324,11 @@ PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 
 
 ![1-12](../images/1-12.png)
 
-选择 Java，这样可以直接导入本地jar包。
+选择Java，这样可以直接导入本地jar包。
 
 ![1-13](../images/1-13.png)
 
-之后我们选择下载好的 Nukkit 的jar包，
+之后我们选择下载好的Nukkit的jar包，
 
 ![1-14](../images/1-14.png)
 
@@ -326,7 +336,7 @@ PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 
 
 ![1-15](../images/1-15.png)
 
-2. 构建jar包
+1. 构建jar包
 
 再然后，我们在libs下创建一个plugins文件夹（先前的点击下面的OK保存一下），
 
@@ -404,7 +414,7 @@ PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 
 ![1-38](../images/1-38.png)
 
 
-### 零、IDEA 的汉化
+### 零、IDEA的汉化
 
 ~~感谢 Testfor , Itname 等人的帮助，我们找到了 IDEA 的汉化包，[点击这里下载](https://github.com/pingfangx/TranslatorX)~~
 
@@ -412,9 +422,9 @@ PS: 在打包之前，建议在pom.xml里加上以下代码，可以解决 IDEA 
 
 截至2021年10月28日，IDEA Community 已经更新至2021.2.3，
 
-**且官方已支持使用插件进行界面的汉化。**
+**且官方已支持使用插件进行页面汉化。**
 
-以 *愉悦师柑也* 的 CLion 2021.2.2 为例，您可以前往 Settings - Plugins 搜素 *Chinese* 并安装。
+以 *愉悦师柑也* 的 *CLion 2021.2.2* 为例，您可以直接前往 **Settings - Plugins** 搜素 *Chinese* 并安装。
 
 ![1-39](../images/1-39.png)
 
